$Id$

	
0.6.1	
	- fixed several bugs in special "CNAME hack" delegations for smaller
	  than class-C nets
	
0.6.0
	- status: added --versions option for displaying module versions
	- fixed problem with newer Pg.pm modules that caused
	  "Error: cannot save state..." messages when trying to use web
	  interface
	- new configuration option: SAURON_NO_REMOTE_ADDR_AUTH
	- generic man page for sauron added
	- added import-zone utility; imports zones into existing server from
	  a zone file or directly from DNS (using zone transfer)
	- sauron: now uses temp files when creating new configuration files
	- added delgroup utility
	- status: now returns with exit code 2, when  run using 
	  option --pending=server and there are pending host changes
	  (returns 0 otherwise, or 1 if there was an error)
	  option 
	- initial draft of User's Guide now included
	- Sauron::UtilDhcp module was missing from Makefile.in
	- various typo fixes

0.5.1
	- sauron: new --check option to automatically validating
	  generated named.conf/zones & dhcpd.conf files
	- new configuration options:
		SAURON_DHCP_CHK_{PROG,ARGS}
		SAURON_NAMED_CHK_{PROG,ARGS}
		SAURON_ZONE_CHK_{PROG,ARGS}
	- configuration changes: ICON_PATH --> SAURON_ICON_PATH,
	  REMOVE_EXPIRED_DELAY --> SAURON_REMOVE_EXPIRED_DELAY,
          USER_TIMEOUT --> SAURON_USER_TIMEOUT
	- new module Sauron.pm that provides load_config() which sets
	  default settings and parses configuration file
	- update-dhcp-info: fixed bug detecting if year changes in the
	  middle of log file, now also fills dhcp_info field with information
	  about latest lease
	- general code cleanup for command-line utilities (no more warnings)
	- backend: add_net now adds default auto assign ranges, 
	  update_net now also checks that auto assign is inside given net
	- frames mode now (hopefully) works better with non-Mozilla
	  browsers
	- added external authentication support (sample authenticator